# reticulous

./: .gitignore  INTERNALS.md  README.md  straddle.yaml
data/: build_times
esp-idf/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp-idf/data/webroot/: WELCOME.md
esp-idf/main/: CMakeLists.txt  idf_component.yml
tools/: write_build_times.py
web-interface/: deploy.sh  index.html  package-lock.json  package.json  quasar.config.ts
web-interface/src/: App.vue
web-interface/src/boot/: modules.ts
web-interface/src/css/: app.css
web-interface/src/layouts/: MainLayout.vue
web-interface/src/pages/: IndexPage.vue
web-interface/src/router/: index.ts  routes.ts
web-interface/src/stores/: index.ts
